[package]
authors = ["Peter Fillmore"]
edition = "2018"
readme = "README.md"
name = "OzLockCon2018_PWM"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"
nb = "0.1.1"

# Uncomment for the panic example.
# panic-itm = "0.4.0"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
[dependencies.stm32f0xx-hal]
#features = ["rt"]
#version = "0.7.1"
#version = "0.12.0"
features = ["stm32f042", "rt"]
#features = ["stm32f042", "rt", "unproven"]
#required-features = ["stm32f042", "rt"]
path = "../stm32f0xx-hal"

# this lets you use `cargo fix`!
[[bin]]
name = "OzLockCon2018_PWM"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
